# Dirac-Sea-Engine

./: CMakeLists.txt  README  README.md  TODO
data/shaders/: sdf.frag  sdf.frag.spv  sdf.frag.spv.txt  sdf.vert  sdf.vert.spv  sdf.vert.spv.txt  test.frag  test.frag.spv  test.frag.spv.txt  test.vert  test.vert.spv  test.vert.spv.txt
scripts/: compile_shaders.bat  compile_shaders.sh
source/: diracsea.h  main.cpp
source/game/: game.cpp  game.h
source/math/: coordinate_system.cpp  coordinate_system.h  matrix22.h  matrix33.h  matrix43.h  matrix44.h  polar.h  quaternion.h  types.h  vector.h  vector2.h  vector3.h  vector4.h
source/math/geometry/: aabb.h  line.h  plane.h  ray.h  sphere.h  triangle.h
source/platform/: platform.cpp  platform.h
source/renderer/: camera.cpp  camera.h  renderer.cpp  renderer.h
source/tests/: test_framework.cpp  test_framework.h  tests.cpp  tests.h
source/tests/math/geometry/: geometry_tests.cpp  geometry_tests.h
source/tests/math/matrix/: matrix_tests.cpp  matrix_tests.h
source/tests/math/quaternion/: quaternion_tests.cpp  quaternion_tests.h
source/tests/math/vector/: vector_tests.cpp  vector_tests.h
